test/conformance/kuttl/exceptions/standard/preconditions/01-manifests.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: manifests.yaml
assert:
- manifests-assert.yaml
