test/conformance/kuttl/exceptions/standard/preconditions/resource-allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: important-tool
  namespace: exception-conditions
spec:
  containers:
  - name: nginx-app
    image: nginx:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
