test/conformance/kuttl/exceptions/standard/preconditions/manifests-assert.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exception-conditions
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
